@@ -82,7 +82,7 @@ Let's now go through the test, line by line.
    :class:`webtest.response.TestResponse`:
 
    >>> response
-   <200 OK text/plain body='Hello world!'>
+   <200 OK text/plain body=b'Hello world!'>
 
 5. We can now verify that the response satisfies our expectations. In
    this case we test the response body in its entirety::
