@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,pep8,coverage,docs
+envlist = py27,pypy,py33,py34,py35,pep8,coverage,docs
 [testenv]
 deps=
      -e{toxinidir}[test]
@@ -18,21 +18,21 @@ commands=
      py.test morepath {posargs}
 
 [testenv:pep8]
-basepython = python2
+basepython = python3.5
 deps = {[testenv]deps}
        flake8
 
 commands = flake8 morepath
 
 [testenv:coverage]
-basepython = python2
+basepython = python3.5
 deps = {[testenv]deps}
        coveralls
 
 commands = py.test morepath --cov morepath {posargs}
 
 [testenv:docs]
-basepython = python2
+basepython = python3.5
 deps = {[testenv]deps}
        sphinx
 
